Style changes and spacing issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,6 +84,7 @@ footer {
     background-color: #aa20ff;
     border-color: #c973ff;
     color: #fff;
+    margin: 3px;
  }
 
  .btn:hover {
@@ -91,6 +92,19 @@ footer {
     border-color: #fd4afd;    
     color: #fff;
  }
+
+ .dropdown-item {
+    display: block;
+    width: 95%;
+    padding: .25rem 1.5rem;
+    clear: both;
+    font-weight: 400;
+    color: #f0f0f0;
+    text-align: center;
+    white-space: nowrap;
+    border: 0;
+}
+
 
  .home-btn {
     background-color: #aa20ff;
@@ -125,8 +139,20 @@ footer {
     margin-bottom: 25px;
     margin-left: auto;
     margin-right: auto;
-    height: 450px;    
+    height: 100%;    
 }
+
+
+.dropdown {
+    position: relative;
+    margin: 20px;
+}
+
+.dropdown:hover {
+    color: #000;
+}
+
+
 
 .dropzone {
     position: relative;
@@ -156,7 +182,7 @@ footer {
     margin-bottom: 25px;
     margin-left: auto;
     margin-right: auto;
-    height: 100px; 
+    /* height: 100px;  */
 
 }
 
